--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <h1>Welcome to Project Nerdcore</h1>
     <p>I am learning to code and HTML is my first language of choice. My goal is to become a proficient programmer and contribute to open-source projects. Feel free to explore my projects and provide feedback! Thank you for visiting my page!</p>
 </div>
-<div>
+<div class="DualCore - All The Things">
     <h1>Dual Core - All The Things</h1>
     <p><b>Dual Core</b> is a hip hop duo composed of American rapper int eighty <em>(David Martinjak)</em> and British producer c64 <em>(Chris Hunger)</em>. Their music is often categorised as <b>Nerdcore</b> (a subgenre of hip hop music).</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/FoUWHfh733Y?si=CmhtZquqWLhfc6S5" title="YouTube video player"
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<div class="ytCracker - Hacker Music">
+    <h1>ytCracker - Hacker Music</h1>
+    <p><b>Hacker Music</b> a YouTube personality known for creating music and content related to hacking, cybersecurity, and technology. ytCracker's music often incorporates themes of hacking, coding, and digital culture.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/NL0yFE0v6VI?si=49T1jb4J09biyUPg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 </html>
